# explora_map_poll

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: macos_release.yml  rust.yml  windows_release.yml
resources/icons/: icon.icns
src/: application.rs  main.rs
