[package]
name = "explora_map_poll"
version = "0.4.0"
edition = "2021"
authors = ["Maarten Van Coile <maarten.vancoile@me.com>"]
license = "MIT OR Apache-2.0"
description = "Simple app that generates a random seed and created a link for rustmaps.com for use with Discord polls."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.3"
iced = "0.14"

[package.metadata.bundle]
# This section is used by `cargo-bundle` to generate OS-specific bundles.

# General bundle metadata
name = "Explora Map Poll"
identifier = "eu.maartenvancoile.explora_map_poll"
icon = [
    "resources/icons/icon.icns",
]
short_description = "A poll generator."
long_description = "Simple app that generates a random seed and created a link for rustmaps.com for use with Discord polls."

[package.metadata.bundle.macos]
# macOS-specific metadata
category = "public.app-category.utilities"
